--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./algorithms/1-Strings/convertHtmlCharacters.js"></script>
+    <script defer src="./algorithms/Decision-tree-graphic/decision-tree.js"></script>
 </head>
 <body>
     
